<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">손뜨개 도우미</string>
    <string name="menu_settings">Settings</string>
    <string name="reset_count_answer">카운트를 초기화 하시겠습니까?</string>
    <string name="reset_memo_answer">메모를 초기화 하시겠습니까?</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="title_activity_title">TitleActivity</string>
    <string name="empty_counting_list">count를 추가하세요.</string>
    <string name="hint_description">Write anything</string>
    <string name="text_reset_count_button">Reset Count</string>
    <string name="text_reset_desc_button">Reset Memo</string>
    <string name="text_up_button">▲</string>
    <string name="text_down_button">▼</string>
    <string name="default_text_name">Name</string>
    <string name="default_text_datetime">2013.01.01 00:00:00</string>
    <string name="default_text_count">0</string>
    <string name="notice_start">손뜨개 도우미 시작중...</string>
    <string name="cont_desc_image">starting image</string>
    <string name="text_add">+</string>
    <string name="text_delete">-</string>
    <string name="text_remove">삭제</string>
</resources>